[gd_scene load_steps=11 format=3 uid="uid://bgpb2l7gg3cuy"]

[ext_resource type="PackedScene" uid="uid://d31ofv6y5mq16" path="res://assests/model/character.tscn" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bjhjt76a5iwyp" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://5hybf4p5mmp6" path="res://scenes/weapon.tscn" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://b7dxlpq0s2xl6" path="res://assests/music/dead_song.mp3" id="4_smehm"]
[ext_resource type="AudioStream" uid="uid://ci6kae7041elw" path="res://assests/music/heal_effect.mp3" id="5_ur7pv"]
[ext_resource type="AudioStream" uid="uid://bl5oiw7ifh1uh" path="res://assests/music/hurt_effect.mp3" id="6_y4r1p"]
[ext_resource type="AudioStream" uid="uid://xkku0udrag" path="res://assests/music/sword_swing_effect.mp3" id="7_d2wvv"]
[ext_resource type="AudioStream" uid="uid://dfuphyatla3gh" path="res://assests/music/walk_effect.mp3" id="8_3v2ag"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g2els"]
height = 1.8413086
radius = 0.26953125

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qhqgy"]
radius = 0.29736328

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_mask = 9
script = ExtResource("1_g2els")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9206543, -0.076595545)
shape = SubResource("CylinderShape3D_g2els")

[node name="visuals" type="Node3D" parent="."]

[node name="Character" parent="visuals" instance=ExtResource("1_3vyb7")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="visuals/Character/RootNode/CharacterArmature" index="0"]
bones/4/rotation = Quaternion(0.08546471, -0.23748347, 0.011578174, 0.96755534)
bones/6/rotation = Quaternion(0.030685868, 1.424845e-06, -5.1683657e-09, 0.9995291)
bones/7/rotation = Quaternion(-0.02451087, -0.00027539246, 0.00012030281, 0.99969953)
bones/9/rotation = Quaternion(0.6749976, -0.40388402, -0.3877761, -0.4805056)
bones/11/rotation = Quaternion(0.011239722, 0.017744463, 0.01047918, 0.9997245)
bones/21/rotation = Quaternion(-0.08193291, 0.16051695, -0.036554262, 0.9829472)
bones/33/rotation = Quaternion(-0.20576301, -0.1937864, 0.3239576, 0.9028621)
bones/34/rotation = Quaternion(0.010541517, -0.02121429, -0.03932215, 0.9989458)
bones/36/rotation = Quaternion(-0.052857205, 0.033640686, -0.06648865, 0.9958182)
bones/37/rotation = Quaternion(-0.08878325, -0.011361824, -0.024741499, 0.99567884)
bones/38/rotation = Quaternion(-0.029872298, -0.009780764, -0.004962062, 0.9994936)
bones/40/rotation = Quaternion(-0.10439322, -0.026901908, -0.06901164, 0.9917741)
bones/41/rotation = Quaternion(-0.12041014, -0.0062388866, 0.018847277, 0.9925257)
bones/42/rotation = Quaternion(-0.019045567, -0.009171974, 0.011120982, 0.99971473)
bones/44/rotation = Quaternion(-0.081932895, -0.16051693, 0.03655425, 0.9829472)
bones/45/rotation = Quaternion(-0.11816424, -0.040226415, 0.04146295, 0.9913122)
bones/46/rotation = Quaternion(-0.07517979, -0.030085094, 0.0074802577, 0.996688)
bones/48/rotation = Quaternion(-0.12658867, -0.17958419, 0.16197224, 0.96202385)
bones/49/rotation = Quaternion(-0.090797596, 0.056609496, 0.023062494, 0.9939916)
bones/50/rotation = Quaternion(-0.11694975, 0.018361034, 0.0028988537, 0.99296385)
bones/51/rotation = Quaternion(0.019557724, -0.18572311, 0.43515924, 0.8807729)
bones/52/rotation = Quaternion(0.041727737, 0.122014694, -0.08518148, 0.98798555)
bones/53/rotation = Quaternion(-0.08858775, 0.055602793, -0.12199231, 0.9870048)
bones/54/rotation = Quaternion(-0.5356169, 0.021101318, 0.8356584, -0.119768016)
bones/61/rotation = Quaternion(-0.0026737682, -3.4093733e-05, 9.115906e-08, 0.9999964)

[node name="Head" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="0"]
transform = Transform3D(0.9999845, -0.0027460428, -0.004816783, -0.0051789125, -0.15230462, -0.9883197, 0.0019803373, 0.98832977, -0.15231653, 3.8777624e-05, -0.0009993667, 0.015460595)

[node name="Index4_L" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="1"]
transform = Transform3D(-0.0639976, -0.18546975, 0.98056346, -0.9977631, 0.03088368, -0.05927869, -0.019288838, -0.9821642, -0.1870315, 0.0026038762, -0.0005434716, 0.00797929)

[node name="Middle4_L" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="2"]
transform = Transform3D(-0.06818224, -0.27336845, 0.95948964, -0.99725556, -0.00911357, -0.07346257, 0.028826907, -0.9618662, -0.2719971, 0.0026392767, -0.00024779743, 0.007805041)

[node name="Ring4_L" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="3"]
transform = Transform3D(-0.34054157, -0.40854067, 0.84683233, -0.93808615, 0.20840292, -0.2766974, -0.063440174, -0.88862956, -0.4542166, 0.0025825468, 0.00013539309, 0.007999891)

[node name="Pinky4_L" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="4"]
transform = Transform3D(-0.04223303, -0.517837, 0.8544358, -0.99238765, 0.120759144, 0.024135213, -0.115678824, -0.84691316, -0.5189957, 0.002550889, 0.00029313748, 0.008242908)

[node name="Thumb3_L" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="5"]
transform = Transform3D(-0.12871265, -0.042297974, 0.9907793, -0.9544881, -0.26576823, -0.1353443, 0.26904282, -0.96310824, -0.006165117, 0.0024873293, -0.0009971583, 0.008900193)

[node name="Index4_R" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="6"]
transform = Transform3D(-0.3520469, 0.33255988, -0.8749093, 0.8856522, -0.18403356, -0.42632213, -0.30279085, -0.9249505, -0.22974364, -0.0018807452, -0.0022238328, 0.008298372)

[node name="Middle4_R" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="7"]
transform = Transform3D(-0.35683435, 0.36659503, -0.8592304, 0.91191363, -0.06286814, -0.40553644, -0.2026861, -0.9282537, -0.31186926, -0.002012911, -0.00190857, 0.008012931)

[node name="Weapon" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D/Middle4_R" index="1" instance=ExtResource("3_qhqgy")]
transform = Transform3D(0.00019819746, -0.006315357, -0.0030127962, -0.0018529204, 0.0028590367, -0.0061149453, 0.006747397, 0.0009706343, -0.0015907435, 0.00080020074, -0.00024768244, -9.9750236e-05)

[node name="Area3D" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D/Middle4_R/Weapon" index="1"]
collision_mask = 4
monitoring = false

[node name="Ring4_R" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="8"]
transform = Transform3D(-0.6031035, 0.44121522, -0.66452605, 0.75811064, 0.057979316, -0.6495426, -0.24805945, -0.8955262, -0.36945722, -0.0020793674, -0.0016050959, 0.008100953)

[node name="Pinky4_R" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="9"]
transform = Transform3D(-0.34265092, 0.56492037, -0.75063634, 0.91651523, 0.02549401, -0.39918497, -0.20637125, -0.824751, -0.52649355, -0.002126307, -0.0013817997, 0.008282277)

[node name="Thumb3_R" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="10"]
transform = Transform3D(-0.31759632, 0.3073211, -0.89704263, 0.6253588, -0.64324033, -0.44177708, -0.71278155, -0.7012805, 0.0121052265, -0.0017242534, -0.0024329126, 0.00951157)

[node name="LowerLeg_L" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="11"]
transform = Transform3D(0.60561866, -0.18755189, -0.773324, 0.7902645, 0.2553846, 0.5569802, 0.09302997, -0.94847333, 0.30288932, 0.0021645182, -0.00015790248, 0.0050753024)

[node name="PT_R" parent="visuals/Character/RootNode/CharacterArmature/Skeleton3D" index="16"]
transform = Transform3D(1, -1.2749048e-09, -6.794929e-05, -6.7948306e-05, 0.0053473976, -0.99998564, 3.646268e-07, 0.99998564, 0.0053473976, -0.00018165624, -0.007312292, 0.004232642)

[node name="AnimationPlayer" parent="visuals/Character" index="1"]
playback_default_blend_time = 0.25
speed_scale = 2.0

[node name="camera_stand" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="camera_stand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 2)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5577958, 0)

[node name="StaminaRegenTimer" type="Timer" parent="."]

[node name="HurtBox" type="Area3D" parent="." groups=["player", "player_hurtbox"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8404034, 0)
shape = SubResource("CapsuleShape3D_qhqgy")

[node name="DeadSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_smehm")

[node name="HealEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ur7pv")

[node name="HurtEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y4r1p")

[node name="SwordSwingEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d2wvv")

[node name="WalkEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3v2ag")

[connection signal="body_entered" from="visuals/Character/RootNode/CharacterArmature/Skeleton3D/Middle4_R/Weapon/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="animation_finished" from="visuals/Character/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="visuals/Character"]
[editable path="visuals/Character/RootNode/CharacterArmature/Skeleton3D/Middle4_R/Weapon"]
